# smolsnake

./: .gitignore  README.md  pyproject.toml
src/smolsnake/: __init__.py  __main__.py  injector.py  installer.py  locker.py
terraform/depcache/: efs-writer-cloud-init.yaml.tftpl  main.tf  sqsincoming.py  terraform.tf  vars.tf
terraform/function/: function.tf  terraform.tf  vars.tf
terraform/function/scripts/: build_lambda_function.sh
tests/func1/: .gitignore  .terraform.lock.hcl  function.tf
tests/func1/src/: lambda_function.py  requirements.txt
